--- a/package.json
+++ b/package.json
@@ -1,32 +1,41 @@
 {
-  "name": "serenity-standards-mcp",
+  "name": "java-serenity-standards-mcp",
   "version": "1.0.0",
-  "description": "MCP para validación y generación de código Java, OOP/SOLID, y Serenity Screenplay (API/Web)",
-  "main": "build/index.js",
+  "description": "MCP Server para validación, generación y análisis de código Java con Serenity Screenplay",
   "type": "module",
+  "main": "build/index.js",
+  "bin": {
+    "java-serenity-standards-mcp": "./build/index.js"
+  },
   "scripts": {
     "build": "tsc",
+    "prepare": "npm run build",
     "watch": "tsc --watch",
-    "start": "node build/index.js",
-    "dev": "tsc && node build/index.js"
+    "dev": "tsc && node build/index.js",
+    "inspector": "npx @modelcontextprotocol/inspector node build/index.js"
   },
   "keywords": [
     "mcp",
+    "java",
     "serenity",
     "screenplay",
-    "java",
-    "solid",
-    "oop",
     "automation",
-    "testing"
+    "testing",
+    "standards",
+    "validation"
   ],
-  "author": "Tu Nombre",
+  "author": "xt9116",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0"
+    "@modelcontextprotocol/sdk": "^1.0.4"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.3.0"
-  }
+    "@types/node": "^22.10.5",
+    "typescript": "^5.7.3"
+  },
+  "files": [
+    "build/**/*",
+    "standards/**/*.json",
+    "README.md"
+  ]
 }
